--- a/src/styles/AboutPage.css
+++ b/src/styles/AboutPage.css
@@ -7,7 +7,7 @@
 .about-hero {
   background: url("https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1200&q=60")
     center/cover no-repeat;
-  height: 60vh;
+  /* height: 60vh; */
   position: relative;
   display: flex;
   justify-content: center;
