--- a/src/styles/Destinations.css
+++ b/src/styles/Destinations.css
@@ -1,6 +1,6 @@
 .destinations-hero {
   position: relative;
-  height: 70vh;
+  /* height: 70vh; */
   background: url('https://plus.unsplash.com/premium_photo-1700486009227-4b194079c197?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8RGVzdGluYXRpb25IZXJvJTIwYmFja2dyaXVuZCUyMGltYWdlfGVufDB8fDB8fHww') center/cover no-repeat;
   display: flex;
   align-items: center;
@@ -9,7 +9,6 @@
 
 .destinations-overlay {
   background: rgba(0, 0, 0, 0.4);
-  padding: 40px;
   text-align: center;
   border-radius: 8px;
 }
